roles/synapse-server/templates/all.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata: 
  name: synapse
spec:
  template:
    metadata:
      name: synapse
      labels:
        app: synapse
    spec:
      volumes:
        - name: synapse-vol
          persistentVolumeClaim:
            claimName: synapse-data
        - name: synapse-pgvol
          persistentVolumeClaim:
            claimName: synapse-postgres-data
        - name: synapse-homeserver
          configMap:
            name: homeserver.yaml
      containers:
        - name: synapse-server
          image: matrixdotorg/synapse
          volumeMounts:
            - name: synapse-vol
              mountPath: "/data"
            - name: synapse-homeserver
              mountPath: /run/config/
          ports:
            - protocol: TCP
              containerPort: 8008
              name: prometheus
        - name: synapse-db
          image: postgres:12
          volumeMounts:
            - mountPath: /pgdata
              name: synapse-pgvol
          ports:
            - protocol: TCP
              containerPort: 9103
              name: postgres
