roles/synapse-server/templates/synapse_Service.yml
apiVersion: v1
kind: Service
metadata:
  name: synapse
  labels:
    app: synapse
spec:
  selector:
    app: synapse
  ports: 
    - protocol: TCP
      port: 8008
      targetPort: 8008
      name: synapse
