roles/synapse-server/templates/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/proxy-body-size: 0
  generation: 2
  name: synapse-ingress
  namespace: default
spec:
  rules:
  - host: registry.randomuser.org
    http:
      paths:
      - backend:
          serviceName: registry
          servicePort: 5000
  - host: coms.randomuser.org
    http:
      paths:
      - backend:
          serviceName: synapse
          servicePort: 8008
  - host: riot-web.randomuser.org
    http:
      paths:
      - backend:
          serviceName: riot-web
          servicePort: 8080
  tls:
  - hosts:
    - coms.randomuser.org
    - riot-web.randomuser.org
      #secretName: coms.randomuser.org
    secretName: letsencrypt-stage
  - hosts:
    - registry.randomuser.org
    secretName: letsencrypt-stage
status:
  loadBalancer:
    ingress:
    - ip: 159.89.242.15
